Linking the landing page to existing pages on the site

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -27,18 +27,18 @@
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="about/why">Why Apprisen?</a>
-                        <a class="dropdown-item" href="about/faqs">FAQ's</a>
-                        <a class="dropdown-item" href="about/testimonials">Client Testimonials</a>
+                        <a class="dropdown-item" href="https://www.apprisen.com/why-apprisen/client-successes">Why Apprisen?</a>
+                        <a class="dropdown-item" href="https://www.apprisen.com/why-apprisen">FAQ's</a>
+                        <a class="dropdown-item" href="https://www.apprisen.com/why-apprisen/client-quotes">Client Testimonials</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="about/contact">Contact Us</a>
+                        <a class="dropdown-item" href="https://www.apprisen.com/contact-us">Contact Us</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services">Services</a>
+                    <a class="nav-link" href="https://www.apprisen.com/counseling-services">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="learning">Learning</a>
+                    <a class="nav-link" href="https://www.apprisen.com/learning-center">Learning</a>
                 </li>
             </ul>
             <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
